# petite-ad

./: .pre-commit-config.yaml  CHANGELOG_LONGTERM.md  Cargo.toml  HISTORY.md  LICENSE  README.md  REFERENCE.md
benches/: compute_benchmark.rs
examples/: multi_macro_demo.rs
src/: error.rs  f.rs  lib.rs  macros.rs  main.rs  math_op.rs  mono.rs  multi.rs  single_backprop.rs  single_backprop_arc.rs  test_utils.rs
src/mono/: mf1.rs  mf2.rs  mf3.rs  mf4.rs  mono_ad.rs  mono_fn.rs  tests.rs  types.rs
src/multi/: builder.rs  f1.rs  f2.rs  f3.rs  multi_ad.rs  multi_fn.rs  tests.rs  types.rs
